--- a/style.css
+++ b/style.css
@@ -464,7 +464,7 @@ section {
 }
 
 .circuits-section .cta-button:hover {
-    background-color: #0056b3;
+    background-color: #810000;
 }
 
 /* Adaptation mobile */
